Fix skills hover on mobile. Added transform scale on hover

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 .badge {
-  @apply flex items-center gap-1.5 rounded-md pl-3 pr-3.5 py-1.5 min-h-9 border border-secondary/25 dark:border-secondary-dark/25  text-sm font-medium cursor-default transition-colors text-secondary dark:text-secondary-dark bg-[#afc2ef0d] dark:bg-[#223e801a];
+  @apply flex items-center gap-1.5 rounded-md px-3 py-1.5 min-h-9 border border-secondary/25 dark:border-secondary-dark/25  text-sm font-medium cursor-default transition transform text-secondary dark:text-secondary-dark bg-[#afc2ef0d] dark:bg-[#223e801a];
 }
 
 .btn {
